# py3dm

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build_and_publish.yml  workflow_ci.yml  workflow_ci_pypy.yml
docs/: access_existing_model.rst  changelog.rst  conf.py  configuration.py  faq.rst  index.rst  installation.rst  modify_existing_model.rst  requirements.txt  tables.rst  why.rst
docs/_templates/autoapi/python/: class.rst  module.rst
lib/opennurbs/: opennurbs_mesh.cpp  opennurbs_precompiledheader.cpp
py3dm/: __init__.py  __init__.pyi
src/: __init__.py  __init__.pyi  curve_table.cpp  curve_table.h  layer_table.cpp  layer_table.h  line_curve_table.cpp  line_curve_table.h  line_table.cpp  line_table.h  mesh_table.cpp  mesh_table.h  model.cpp  model.h  object_table.cpp  object_table.h  opennurbs_includes.h  point_table.cpp  point_table.h  version.py
src/bindings/: 3d_vector_bindings.cpp  3d_vector_bindings.h  bindings.cpp  bindings.h  curve_table_bindings.cpp  curve_table_bindings.h  enumerators_bindings.cpp  enumerators_bindings.h  geometry_bindings.cpp  geometry_bindings.h  layer_bindings.cpp  layer_bindings.h  layer_table_bindings.cpp  layer_table_bindings.h  layer_view_bindings.cpp  layer_view_bindings.h  line_bindings.cpp  line_bindings.h  line_curve_bindings.cpp  line_curve_bindings.h  line_curve_table_bindings.cpp  line_curve_table_bindings.h  line_curve_view_bindings.cpp  line_curve_view_bindings.h  line_table_bindings.cpp  line_table_bindings.h  mesh_bindings.cpp  mesh_bindings.h  mesh_table_bindings.cpp  mesh_table_bindings.h  mesh_view_bindings.cpp  mesh_view_bindings.h  model_bindings.cpp  model_bindings.h  model_component_bindings.cpp  model_component_bindings.h  object_attributes_bindings.cpp  object_attributes_bindings.h  object_bindings.cpp  object_bindings.h  (+14 more)
src/bindings/casters/: color_caster.h  on_wstring_caster.h  uuid_caster.h
src/utilities/: layer_utilities.cpp  layer_utilities.h  object_utilities.cpp  object_utilities.h  utilities.cpp  utilities.h
src/views/: curve_view.cpp  curve_view.h  layer_view.cpp  layer_view.h  line_curve_view.cpp  line_curve_view.h  mesh_view.cpp  mesh_view.h  point_view.cpp  point_view.h
tests/: test_attributes.py  test_curve_table.py  test_geometry.py  test_layer.py  test_layer_table.py  test_layer_view.py  test_line.py  test_line_curve.py  test_line_curve_table.py  test_line_table.py  test_mesh.py  test_mesh_table.py  test_model.py  test_model_component.py  test_object.py  test_object_table.py  test_point.py  test_point_3d.py  test_point_geometry.py  test_point_table.py  test_point_view.py  test_text_log.py  test_vector_3d.py
